--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #313131;
 }
 
 @theme inline {
@@ -14,13 +14,76 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #323232;
     --foreground: #ededed;
   }
+  button.slick-next::before,
+  button.slick-prev::before {
+    border-radius: 2px;
+    color: var(--background);
+  }
 }
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-montserrat);
+}
+
+body, p, span, li {
+  font-family: var(--font-open-sans);
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h2 {
+  font-size: 26px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+button.slick-next::before,
+button.slick-prev::before {
+  border-radius: 2px;
+  @apply text-stone-100 text-3xl;
+}
+
+.dark button.slick-next::before,
+.dark button.slick-prev::before {
+  @apply text-stone-100;
+}
+
+ul.slick-dots > li > button::before,
+ul.slick-dots > li.slick-active > button::before{
+  @apply text-stone-100 text-xl;
+}
+
+.slick-arrow-custom.next {
+  @apply top-full right-0 transform-none;
+}
+
+.slick-arrow-custom.prev {
+  @apply top-full left-full -translate-x-14 translate-y-2.5;
+}
+
+ul.slick-dots {
+  @apply w-max;
+}
+
+.slick-track{
+  @apply flex items-center;
+  display: flex !important;
 }
